# autonomous-business-ops-copilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_cd.yml
configs/: agents.yaml  logging.yaml  prompts.yaml  retrieval.yaml  settings.py
docs/: api_documentation.md  architecture.md  architecture_decisions.md  benchmark_guide.md  deployment_guide.md  developer_guide.md  evaluation_guide.md  interview_questions.md  resume_description.md  roadmap.md  troubleshooting_guide.md
evaluation/golden_dataset/: golden_dataset.json
frontend/: app.py
frontend/components/: confidence_gauge.py  graph_viewer.py  metrics_cards.py  sidebar.py  timeline.py
frontend/pages/: 10_🛡️_Admin.py  1_🏠_Home.py  1_📥_Ticket_Inbox.py  2_📥_Ticket_Inbox.py  2_🔍_Review_Dashboard.py  3_📊_Analytics.py  3_🔍_Agent_Inspector.py  4_🔎_Retrieval_Explorer.py  4_🧠_Knowledge_Graph.py  5_📈_Benchmarks.py  5_🧠_Memory_Explorer.py  6_🌐_Knowledge_Graph.py  6_🔍_Explainability.py  7_⚙️_Settings.py  7_📥_File_Ingestion.py  8_📈_Benchmarks.py  9_⚙️_Settings.py
frontend/styles/: main.css
frontend/utils/: state_helpers.py
knowledge/entities/: .gitkeep
knowledge/metrics/: .gitkeep
knowledge/policies/: .gitkeep
knowledge/procedures/: .gitkeep
scripts/: generate_synthetic.py  run_benchmarks.py  seed_knowledge.py  setup_neo4j.py
src/: __init__.py
src/agents/: __init__.py  analytics_agent.py  base.py  compliance.py  critic.py  customer_history.py  draft.py  fact_checker.py  hallucination.py  planner.py  policy.py  registry.py  reporting.py  research.py  risk.py  security_agent.py  triage.py
src/api/: __init__.py  dependencies.py  exceptions.py  main.py
src/api/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  trace.py
src/benchmark/: __init__.py  baselines.py  comparator.py  report.py  runner.py
src/confidence/: __init__.py  engine.py  groundedness.py  hallucination.py  schemas.py
src/database/: __init__.py  models.py  postgres.py  sqlite_fallback.py
src/evaluation/: __init__.py  deepeval_eval.py  metrics.py  pipeline.py  ragas_eval.py  schemas.py
src/explainability/: __init__.py  renderer.py  schemas.py  tracer.py
src/ingestion/: __init__.py  chunker.py  csv_parser.py  docx.py  email_parser.py  ocr.py  pdf.py  pipeline.py  pptx.py  schemas.py
src/knowledge_graph/: __init__.py  builder.py  community.py  extractor.py  neo4j_client.py  resolver.py  schemas.py  traversal.py
src/memory/: __init__.py  experience.py  feedback_learner.py  schemas.py  store.py
src/observability/: __init__.py  cost_tracker.py  logging.py  metrics.py  tracer.py
src/okf/: __init__.py  builder.py  lineage.py  parser.py  schemas.py  versioning.py
src/orchestrator/: __init__.py  agent_context.py  context_builder.py  event_bus.py  graph.py  llm_gateway.py  nodes.py  parallel.py  prompts.py  routing.py  state.py
src/retrieval/: __init__.py  bm25.py  embeddings.py  fusion.py  graph_retriever.py  metrics.py  pipeline.py  query_engine.py  reranker.py  schemas.py  vector_store.py
src/security/: __init__.py  audit.py  auth_providers.py  injection.py  interfaces.py  pii.py  pii_detectors.py  rbac.py  validation.py
src/synthetic/: __init__.py  generator.py  schemas.py  templates.py
src/tools/: __init__.py  base.py  calendar.py  database.py  email_tool.py  filesystem.py  gdrive.py  github.py  notion.py  registry.py  slack.py
tests/: __init__.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_graph_construction.py  test_pipeline.py  test_retrieval_pipeline.py
(+33 files in other folders)
